height of body to fix jumping images

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,9 @@
     --foreground: #ededed;
   }
 }
+html, body {
+  height: 100%;
+}
 
 body {
   background: var(--background);
